[tool.poetry]
name = "academy"
version = "0.1.0"
description = "EDA pipeline on World Bank education data to score and rank countries for EdTech market expansion."
authors = ["Abdulkadir GUVEN"]
packages = [{include = "academy_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3"
numpy = "^2.3"
seaborn = "*"
matplotlib = "*"
missingno = "*"
scikit-learn = "*"
ipython = "*"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
